--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,55 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+    
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* Track */
+::-webkit-scrollbar-track {
+    background: #18181B;
+    
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #64B381;
+    border-radius: 25px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #3f8f5c;
+}
+
+
+
+
+
+
+
+.scroll::-webkit-scrollbar {
+    height: 5px;
+    
+}
+
+/* Track */
+.scroll::-webkit-scrollbar-track {
+    background: #18181B;
+    
+}
+
+/* Handle */
+.scroll::-webkit-scrollbar-thumb {
+    background: #64B381;
+    border-radius: 25px;
+}
+
+/* Handle on hover */
+.scroll::-webkit-scrollbar-thumb:hover {
+    background: #3f8f5c;
 }
